Fixed nav overflow error

--- a/css/main.css
+++ b/css/main.css
@@ -325,6 +325,7 @@ model-viewer {
 
     li {
         text-align: right;
+        max-width: 100vw;
     }
 
     .dropdown {
